--- a/SalesPage.css
+++ b/SalesPage.css
@@ -1,6 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Libre+Caslon+Text&display=swap');
 /* h1 a:hover {
   color:yellow*/
 
@@ -8,7 +7,8 @@
 
 h1 {
   /*font-family: 'Raleway', sans-serif;*/
-  font-family: 'Rajdhani', sans-serif;
+  font-family: 'Libre Caslon Text', serif;
+
   font-weight: bold;
   font-size: 50px;
   line-height: 60px;
